# tinyvectors

./: .bazelignore  .bazelrc  .gitignore  .gitlab-ci.yml  BUILD.bazel  CHANGELOG.md  LICENSE  MODULE.bazel  README.md  flake.nix  package.json  pnpm-lock.yaml  tsconfig.declarations.json  tsconfig.json  vite.config.ts  vite.dev.config.ts  vitest.config.ts
.github/workflows/: ci.yml  publish.yml
dev/: App.svelte  index.html  main.ts
docs/: GEL_PHYSICS_ROADMAP.md  physics-feel-contract.md  release-flow.md
scripts/: build-declarations.mjs  build-vite.mjs  check-bundle-size.mjs  check-package-consumer.mjs  check-release-metadata.mjs  copy-svelte-declarations.mjs  probe-motion-cdp.mjs
src/: index.ts
src/core/: BlobPhysics.ts  GaussianKernel.ts  InteractionField.ts  PathGenerator.ts  SpatialHash.ts  SpringSystem.ts  browser.ts  index.ts  schema.ts  theme-colors.ts  theme-presets.ts  types.ts
src/motion/: DeviceMotion.ts  OneEuro.ts  PointerMapper.ts  PointerPhysicsController.ts  ScrollHandler.ts  index.ts
src/svelte/: BlobSVG.svelte  BlobSVG.svelte.d.ts  TinyVectors.svelte  TinyVectors.svelte.d.ts  index.ts  types.ts
src/themes/: index.ts  vector-colors.css
src/workers/: index.ts  physics.worker.ts
tests/pbt/: arbitraries.ts  gel-physics-invariants.test.ts
tests/unit/: blob-physics-feel.test.ts  core.test.ts  device-motion.test.ts  devicemotion.test.ts  getblobs-stable.test.ts  interaction-field.test.ts  oneeuro.test.ts  pointer-mapper.test.ts  pointer-physics-controller.test.ts  scroll-handler.test.ts  spring.test.ts  theme-presets.test.ts
