"""
BUILD.bazel for @tummycrypt/tinyvectors.

Hybrid build for a package containing both pure TypeScript (core/, motion/, themes/,
workers/) and Svelte components (svelte/).

  Standalone: pnpm build
  Bazel:      bazel build //:pkg

Build strategy:
  - js_run_binary wrapping `vite build` for the full package (handles .svelte
    components, Svelte runes, Web Workers, and tree-shaking in a single pass)
  - svelte-check for type validation (covers .svelte + .ts files)
  - vitest for PBT tests (property-based tests using fast-check)
"""

load("@aspect_rules_js//js:defs.bzl", "js_library", "js_run_binary")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//:svelte-check/package_json.bzl", svelte_check_bin = "bin")
load("@npm//:typescript/package_json.bzl", typescript_bin = "bin")
load("@npm//:vite/package_json.bzl", vite_bin = "bin")
load("@npm//:vitest/package_json.bzl", vitest_bin = "bin")

# =============================================================================
# npm link - makes node_modules available for this package
# =============================================================================

npm_link_all_packages(name = "node_modules")

vite_bin.vite_binary(name = "vite")
typescript_bin.tsc_binary(name = "tsc")
svelte_check_bin.svelte_check_binary(name = "svelte_check")


# =============================================================================
# JavaScript package build
#
# Uses `vite build` to compile the runtime package surface:
#   - Pure TypeScript (core/, motion/, themes/, workers/)
#   - Svelte 5 components with runes mode (svelte/)
#   - Web Worker bundling (workers/physics.worker.ts)
# =============================================================================

js_run_binary(
    name = "tinyvectors_build",
    tool = "//:vite",
    srcs = glob(
        [
            "src/**/*.ts",
            "src/**/*.svelte",
        ],
        exclude = [
            "src/**/*.test.ts",
            "src/**/*.spec.ts",
        ],
    ) + [
        "package.json",
        "pnpm-lock.yaml",
        "tsconfig.json",
        "tsconfig.declarations.json",
        "vite.config.ts",
        ":node_modules",
    ],
    args = [
        "build",
    ],
    out_dirs = ["dist"],
    visibility = ["//visibility:public"],
)

js_run_binary(
    name = "tinyvectors_declarations",
    tool = "//:tsc",
    srcs = glob([
        "src/**/*.ts",
    ]) + [
        "package.json",
        "pnpm-lock.yaml",
        "tsconfig.json",
        "tsconfig.declarations.json",
        ":node_modules",
    ],
    args = [
        "-p",
        "tsconfig.declarations.json",
    ],
    out_dirs = ["dist-types"],
    visibility = ["//visibility:public"],
)

js_library(
    name = "tinyvectors",
    srcs = [
        ":tinyvectors_build",
        ":tinyvectors_declarations",
    ],
    visibility = ["//visibility:public"],
)

# =============================================================================
# npm package target
#
# Packages the compiled output into a publishable npm package structure
# matching the "exports" field in package.json.
# =============================================================================

npm_package(
    name = "pkg",
    srcs = [
        "package.json",
        "README.md",
        "LICENSE",
        "src/themes/vector-colors.css",
        ":tinyvectors",
    ],
    package = "@tummycrypt/tinyvectors",
    version = "0.2.3",
    visibility = ["//visibility:public"],
)

# =============================================================================
# Test targets
#
# Runs property-based tests (PBT) using vitest + fast-check.
# Tests are in tests/pbt/ and include both .test.ts and helper .ts files
# (arbitraries). The test lib compiles all TS under tests/ so helpers are
# available at runtime.
#
# NOTE: Tests import directly from src/ (not dist/), so they depend on the
# source TypeScript files rather than the built output. Vitest handles
# transpilation on the fly.
# =============================================================================

vitest_bin.vitest_test(
    name = "test",
    data = glob([
        "src/**/*.ts",
        "tests/**/*.ts",
    ]) + [
        "package.json",
        "pnpm-lock.yaml",
        "tsconfig.json",
        "vitest.config.ts",
        ":node_modules",
        ":node_modules/vitest",
        ":node_modules/fast-check",
        ":node_modules/@fast-check/vitest",
    ],
    args = [
        "run",
        "--reporter=verbose",
        "--config",
        "$(rootpath vitest.config.ts)",
    ],
    log_level = "info",
    visibility = ["//visibility:public"],
)

# =============================================================================
# Typecheck target
#
# Uses svelte-check for type validation of .svelte and .ts files.
# This is preferred over plain tsc for packages containing Svelte components,
# as it understands .svelte file boundaries and runes syntax.
# =============================================================================

js_run_binary(
    name = "typecheck",
    tool = "//:svelte_check",
    srcs = glob([
        "src/**/*.ts",
        "src/**/*.svelte",
    ]) + [
        "tsconfig.json",
        "pnpm-lock.yaml",
        ":node_modules",
    ],
    args = [
        "--tsconfig",
        "tsconfig.json",
    ],
    stdout = "typecheck.log",
    visibility = ["//visibility:public"],
)

# =============================================================================
# Exported files for downstream consumers
# =============================================================================

exports_files(
    [
        "package.json",
        "pnpm-lock.yaml",
        "tsconfig.declarations.json",
        "tsconfig.json",
        "vitest.config.ts",
        "vite.config.ts",
    ],
    visibility = ["//visibility:public"],
)
