"""
MODULE.bazel for standalone Bazel consumption of @tummycrypt/tinyvectors.

Usage from external repo:
  bazel_dep(name = "tummycrypt_tinyvectors", version = "0.2.3")
"""

module(
    name = "tummycrypt_tinyvectors",
    version = "0.2.3",
    compatibility_level = 1,
)

bazel_dep(name = "aspect_rules_js", version = "2.9.1")
bazel_dep(name = "aspect_rules_ts", version = "3.8.4")
bazel_dep(name = "rules_nodejs", version = "6.3.0")
